--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Get Weather Now!</string>
+    <string name="background_image">background image</string>
 </resources>
