Add button and file to button background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Get Weather Now!</string>
     <string name="background_image">background image</string>
+    <string name="change_location">Change Location</string>
 </resources>
